# btool

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  _2github_2workspace_2test_2_bib_element_fixture_test_8cpp-example.html  _2github_2workspace_2test_2_bib_element_test_8cpp-example.html  _2github_2workspace_2test_2_generator_fixture_test_8cpp-example.html  _2github_2workspace_2test_2_parser_fixture_test_8cpp-example.html  _2github_2workspace_2test_2_parser_state_fixture_test_8cpp-example.html  _2github_2workspace_2test_2_parser_state_test_8cpp-example.html  _2github_2workspace_2test_2_parser_test_8cpp-example.html  _2github_2workspace_2test_2_translation_table_fixture_test_8cpp-example.html  _2github_2workspace_2test_2_translation_table_test_8cpp-example.html  _abstract_generator_8cpp.html  _abstract_generator_8cpp__incl.map  _abstract_generator_8cpp__incl.md5  _abstract_generator_8cpp_source.html  _abstract_generator_8hpp.html  _abstract_generator_8hpp__dep__incl.map  _abstract_generator_8hpp__dep__incl.md5  _abstract_generator_8hpp__incl.map  _abstract_generator_8hpp__incl.md5  _abstract_generator_8hpp_source.html  _abstract_parser_state_8cpp.html  _abstract_parser_state_8cpp__incl.map  _abstract_parser_state_8cpp__incl.md5  _abstract_parser_state_8cpp_source.html  _abstract_parser_state_8hpp.html  _abstract_parser_state_8hpp__dep__incl.map  _abstract_parser_state_8hpp__dep__incl.md5  _abstract_parser_state_8hpp__incl.map  _abstract_parser_state_8hpp__incl.md5  _abstract_parser_state_8hpp_source.html  _bib_element_8cpp.html  _bib_element_8cpp.js  _bib_element_8cpp__incl.map  _bib_element_8cpp__incl.md5  _bib_element_8cpp_source.html  (+567 more)
.github/workflows/: main.yml
doc/: berichtGroup1KW18.md  berichtGroup1KW27.md  snowCardnonFuctional.md
doc/Berichte/: Zwischenbericht.md  berichtGroup1KW22.md  berichtGroup1KW23.md  berichtGroup1KW24.md  berichtGroup1KW26.md  berichtGroup1KW27.md  berichtGroup1KW28.md  berichtGroup1KW29.md
doc/Bestandteile_Abgabe/: table_of_contents.md
doc/Bestandteile_Abgabe/CRC_Cards/: crcCards.md
doc/Bestandteile_Abgabe/snowCards/functional/: snowCardFunctional.md
doc/Bestandteile_Abgabe/snowCards/nonFunctional/: snowCardNonFuctional.md  snowCardNonFuctional006.md  snowCardNonFuctional010.md
doc/CRC_Cards/: crcCards.md
doc/milestone1/: berichtGroup1KW18.md  protokollGroup1KW18.md
doc/milestone2/: berichtGroup1KW19.md  protokollGroup1KW19.md
doc/milestone3/: Klassendiagramm.vpd  berichtGroup1KW20.md  beschreibung.md  protokollGroup1KW20.md
doc/milestone4/: berichtGroup1KW21.md  protokollGroup1KW21.md
doc/milestone4/sequenzdiagram/: SequenzDia.vpd
doc/milestone4/statediagram/: Zustandsdia.vpd  Zustandsdia_new.vpd
doc/milestone4/usecases/: use-cases.vpd
doc/snowCards/: snowCardFunctional.md  snowCardNonFuctional.md
doc/snowCards/functional/: snowCardFunctional.md  snowCardFunctional001.md  snowCardFunctional002.md  snowCardFunctional003.md  snowCardFunctional004.md  snowCardFunctional005.md
doc/snowCards/nonFunctional/: snowCardNonFuctional.md  snowCardNonFuctional006.md  snowCardNonFuctional007.md  snowCardNonFuctional008.md  snowCardNonFuctional009.md  snowCardNonFuctional011.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enumvalues_0.js  (+61 more)
src/: AbstractFileWriter.cpp  AbstractFileWriter.hpp  AbstractGenerator.cpp  AbstractGenerator.hpp  AbstractParserState.cpp  AbstractParserState.hpp  BibElement.cpp  BibElement.hpp  Doxyfile  Field.cpp  Field.hpp  FieldConstraint.cpp  FieldConstraint.hpp  FileWriter.hpp  FileWriterException.cpp  FileWriterException.hpp  Generator.hpp  GeneratorException.cpp  GeneratorException.hpp  GlobalParserState.cpp  GlobalParserState.hpp  HtmlGenerator.cpp  HtmlGenerator.hpp  IdentifierParserState.cpp  IdentifierParserState.hpp  KeyParserState.cpp  KeyParserState.hpp  Parser.cpp  Parser.hpp  ParserContext.cpp  ParserContext.hpp  ParserException.cpp  ParserException.hpp  ParserState.hpp  PlainTextGenerator.cpp  PlainTextGenerator.hpp  StyleParserState.cpp  StyleParserState.hpp  StyleProperties.cpp  StyleProperties.hpp  (+13 more)
src/test/: CMakeLists.txt
test/: BibElementFixtureTest.cpp  BibElementTest.cpp  CMakeLists.txt  FieldConstraintTest.cpp  FieldTest.cpp  GeneratorFixtureTest.cpp  Parser.cpp  ParserFixtureTest.cpp  ParserStateFixtureTest.cpp  ParserStateTest.cpp  ParserTest.cpp  StylePropertiesTest.cpp  TranslationTableFixtureTest.cpp  TranslationTableTest.cpp  addTest.cpp
test/res/: publications.bib
